---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-11-09

  Features:
    - Added Hunting Mode (Aggressive Mode, continuously search and destroy enemy units)
    - Added QRF (Quick Reaction Force) Mode, stay in position and automatically engange enemy units within close range
    - Added Perimeter Mode, stay in position and automatically engange enemy units within long range (mostly to clear expansions)
    - Added Control Groups function
    
  Changes:
    - Added print_global to remote interface for printing storage object
    - Change remote interface name from __erm_unit_control__ to erm_unit_control. Same as the info.json name for consistency.    

---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-10-05

  Bugfixes:
    - Fixed an issue that blueprint library can not be re-arranged due to the changes in 2.0.69 update. 

---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 2025-09-22

  Bugfixes:
    - Fixed data-final-updates.lua to data-final-fixes.lua
    - Fixed select all unit control. Select all unit within 200 radius.  [Default: Shift-Alt-Left-click]
    - Disabled [Ctrl-Alt-Left-click] to unblock ping to chat function.

---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 2025-05-10

  Changes:
    - Change Unit Control's 'ALT + left-click' to "Control + ALT + left-click" to avoid factoripedia collision.

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2025-03-11

  Features:
    - Fork of Klonan's unit control. Updated for Factorio 2.0.
    - It's a temporary solution.
    - This will deprecate when Klonan releases his 2.0 Unit control. ERM mods will depend on that instead.