@@ -6,9 +6,11 @@ perimeter-mode=Perimeter Mode
 
 [mod-setting-name]
 erm-unit-control-selection-limit=Unit Selection Limit
+erm-unit-control-selection-radius=Unit Selection Radius
 
 [mod-setting-description]
 erm-unit-control-selection-limit=The maximum number of units that can be selected at one time (Default: 100).
+erm-unit-control-selection-radius=The radius to scan for friendly units under certain selections, e.g selecting same type of unit.
 
 [controls]
 suicide=Suicide
