@@ -7,5 +7,14 @@ data:extend({
     default_value = 100,
     allowed_values = { 20, 30, 40, 50, 70, 100, 150, 200, 250, 300, 400, 500},
     order = "a-erm-a" -- Puts it near the top of the mod settings list
+  },
+  {
+    type = "int-setting",
+    name = "erm-unit-control-selection-radius",
+    setting_type = "runtime-global",
+    default_value = 100,
+    allowed_values = { 32, 64, 100, 150, 200, 320},
+    order = "a-erm-a"
   }
 })
+
